# boilerplate-occt-emsdk

./: .gitignore  CMakeLists.txt  build.sh  readme.md
archive/: CMakeLists_0.txt  CMakeLists_1.txt  CMakeLists_2.txt  CMakeLists_3.txt  CMakeLists_occt_externalproject.txt
scripts/: 00-emsdk-install.sh  05-emsdk-activate.sh  06-emsdk-bootstrap-freetype.sh  15-compile_install_freetype.sh  20-get_occt.sh  25-compile_install_occt.sh  50-setup_main_project.sh  init_vars.sh  setup_project.sh  test.c
scripts/archive/: readme.md
src/: WasmOcctView.cpp  occt-webgl-sample.html
